--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./public/favicon_io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.scss">
+  <link rel="stylesheet" href="/style.scss">
   <title>Vite App</title>
 </head>
 
@@ -60,7 +60,7 @@
       </div>
     </main>
   </div>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="/main.js"></script>
 </body>
 
 </html>
